--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="pocket_doctor"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:usesCleartextTraffic="true">
      <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyAvIHhXiQ7TxWE2L7WY_qP2WpBDrR7TWHk"/>
      <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
         <activity
